fix whitespace wrapping on history page

--- a/services/frontend-service/src/ui/components/ReleaseCard/ReleaseCard.scss
+++ b/services/frontend-service/src/ui/components/ReleaseCard/ReleaseCard.scss
@@ -58,6 +58,7 @@
 }
 
 .release-environment {
+  white-space: nowrap;
   background-color: grey;
   .mdc-evolution-chip__text-label {
     color: white;
